--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href=" https://economictimes.indiatimes.com/industry/cons-products/food/gram-unnati-partners-with-coco-cola-india-for-project-to-boost-mango-yields-in-karnataka/articleshow/111806288.cms">
 						Gram Unnati partners with Coco-Cola India for project to boost mango yields in Karnataka</a>
 					<span>  17 Jul,2024</span>
-					<a class="mask" href=" https://economictimes.indiatimes.com/industry/cons-products/food/gram-unnati-partners-with-coco-cola-india-for-project-to-boost-mango-yields-in-karnataka/articleshow/111806288.cms"><img src="/images/mango.webp" class="img-responsive zoom-img" alt="" /></a>
+					<a class="mask" href=" https://economictimes.indiatimes.com/industry/cons-products/food/gram-unnati-partners-with-coco-cola-india-for-project-to-boost-mango-yields-in-karnataka/articleshow/111806288.cms"><img src="images/mango.webp" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
 						<p>New Delhi: Gram Unnati has partnered with Coco-Cola India to launch a project for enhancing mango yields in Karnataka and improving farmers' income. Gram Unnati said 'Project Mango Unnati' aims to revolutionise sustainable mango cultivation initiative, focusing on the Alphonso and Totapuri varieties in Karnataka.
 
