--- a/login.html
+++ b/login.html
@@ -198,7 +198,7 @@
                     ">Know More</a>
             </div>
             <div class="card-image">
-                <img src="/images/Paramparagat-Krishi-Vikas-Yojana.jpg" alt="Card Image 1">
+                <img src="images/Paramparagat-Krishi-Vikas-Yojana.jpg" alt="Card Image 1">
             </div>
         </div>
         <div class="card">
@@ -226,7 +226,7 @@
                      https://jalshakti-dowr.gov.in/pmksy-aibp/#:~:text=Pradhan%20Mantri%20Krishi%20Sinchayee%20Yojana%20(PMKSY)%20was%20launched%20during%20the,sustainable%20water%20conservation%20practices%2C%20etc.">Know More</a>
             </div>
             <div class="card-image">
-                <img src="/images/abhi_sinchai.jpg" alt="Card Image 2">
+                <img src="images/abhi_sinchai.jpg" alt="Card Image 2">
             </div>
         </div>
         <div class="card">
@@ -250,7 +250,7 @@
                     <a href="https://nmsa.dac.gov.in/">Know More</a>
             </div>
             <div class="card-image">
-                <img src="/images/National-Mission-For-Sustainable-Agriculture.jpg" alt="Card Image 3">
+                <img src="images/National-Mission-For-Sustainable-Agriculture.jpg" alt="Card Image 3">
             </div>
         </div>
         <div class="card">
@@ -274,7 +274,7 @@
                 <a href="https://www.myscheme.gov.in/schemes/rkvy">Know More</a>
             </div>
             <div class="card-image">
-                <img src="/images/Rashtriya-Krishi-Vikas-Yojna-1024x512.jpg" alt="Card Image 2">
+                <img src="images/Rashtriya-Krishi-Vikas-Yojna-1024x512.jpg" alt="Card Image 2">
             </div>
         </div>
         <div class="card">
@@ -293,7 +293,7 @@
                 <a href="https://pmfby.gov.in/">Know More</a>
             </div>
             <div class="card-image">
-                <img src="/images/abhi_bhema.jpg" alt="Card Image 2">
+                <img src="images/abhi_bhema.jpg" alt="Card Image 2">
             </div>
         </div>
     </div>
